--- a/landing/index.Rmd
+++ b/landing/index.Rmd
@@ -30,13 +30,13 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-[![](layout.png)](seam.stat.illinois.edu/app/)
+[![](layout.png)](https://seam.stat.illinois.edu/app/)
 
 > The SEAM (**s**ynthetic **e**stimated **a**verage **m**atchup) app allows users to visualize synthetic spray chart distributions (batted-ball distributions) for any MLB batter-pitcher matchup that has occurred or could have occurred in the last five years.
 
 ## Information
 
-- [**Shiny App**](seam.stat.illinois.edu/app/) [ [Source @ GitHub](https://github.com/cdyoung/seam/) ]
+- [**Shiny App**](https://seam.stat.illinois.edu/app/) [ [Source @ GitHub](https://github.com/cdyoung/seam/) ]
 - [Article Preprint](https://publish.illinois.edu/danieleck/files/2020/05/spray.pdf)
 <!-- - [Fangraphs Article]() -->
 
